# Edge-Detection-Viewer

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv-processor.cpp  opencv-processor.h
app/src/main/java/com/edgedetection/: GLRenderer.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
web/: index.html  package.json  tsconfig.json  viewer.ts
